<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloud_bg">

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <LinearLayout
            android:id="@+id/close_btn_onBoarding"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/round_button"
            android:gravity="center"
            android:textColor="@color/black">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/close_image"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reader_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/close_btn_onBoarding"
            android:background="@drawable/round_button_camera"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/camere_image"
                android:src="@drawable/ic_baseline_camera_alt_24" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/read_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/read_button"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/voice_settings_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/read_item_title"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/read_item_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26dp"
            android:textStyle="normal" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_finish_read_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_state"
        android:elevation="10dp"
        android:text="@string/next"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>