<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/getStartedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.onBoarding.GetStartedOnBoardingFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/intro_get_started_btn"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/read_person_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_read_person" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/read_person_intro"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <TextView
                android:id="@+id/intro_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/intro_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/intro_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/intro_title"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/intro_subtitle"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:textStyle="normal" />
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/intro_get_started_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_bg"
        android:elevation="10dp"
        android:text="@string/get_started"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>